--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,13 +18,13 @@
 	<style>
 		.btn-primary {
 			color: #fff;
-			background-color: 
+			background-color: #70c057
 			;
-			border-color: 
+			border-color: #70c057
 			;
 		}
 		.app-sidebar__heading {
-			color: 
+			color: white
 			;
 		}
 	</style>
@@ -180,7 +180,7 @@
 									</li>
 									<li class="app-sidebar__heading">Taux Egalim / Bio / Local</li>
 									<li>
-										<a href="{{ path("taux_ebl") }}">
+										<a href="{{ path("tauxDate") }}">
 											<i class="metismenu-icon pe-7s-graph2"></i>Clients
 										</a>
 										<a href="charts-chartjs.html">
