--- a/templates/TauxEBL/taux.html.twig
+++ b/templates/TauxEBL/taux.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Taux Egalim / Bio / Local{% endblock %}
 
 {% block page %}
-	Taux Egalim / Bio / Local : <strong>{{ ftgnr }}</strong> du {{ dateS }} au {{ dateE }}
+	Taux Egalim / Bio / Local : <strong>{{ ftgnr }}</strong> du {{ dateStart }} au {{ dateEnd }}
 {% endblock %}
 
 {% block body %}
@@ -11,7 +11,7 @@
 		<div class="col-lg-12">
 			<div class="main-card mb-3 card">
 				<div class="card-body">
-					<h5 class="card-title">Liste des produits achetés par <strong>{{ ftgnr }}</strong> du {{ dateS }} au {{ dateE }}</h5>
+					<h5 class="card-title">Liste des produits achetés par <strong>{{ ftgnr }}</strong> du {{ dateStart }} au {{ dateEnd }}</h5>
                     <table class="mb-0 table table-striped">
 						<thead>
 							<tr>
