--- a/templates/Admin/Companies/companyEdit.html.twig
+++ b/templates/Admin/Companies/companyEdit.html.twig
@@ -14,6 +14,7 @@
 						<label for="nom">Nom de la Société</label><input name="name" type="text" class="form-control" value="{{ company.name }}"/>
 						<label for="dossierCommun">Dossier Commun</label><input name="dossierCommun" type="text" class="form-control" value="{{ company.name }}" disabled="disabled"/>
 						<label for="codeCouleur">Code Couleur</label><input name="colorCode" type="color" class="form-control" value="{{ company.colorCode }}"/>
+						<label for="codeCouleurText">Code Couleur Texte</label><input name="colorText" type="color" class="form-control" value="{{ company.colorText }}"/>
 						<label for="baseDeDonnees">Nom de la Base de Données</label><input name="databaseName" type="text" class="form-control" value="{{ company.databaseName }}"/>
 					</div>
 					<div class="modal-footer">
