--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,42 +1,113 @@
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="Content-Language" content="en">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+		<title>Login Boxed - ArchitectUI HTML Bootstrap 4 Dashboard Template</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
+		<meta name="description" content="ArchitectUI HTML Bootstrap 4 Dashboard Template">
 
+		<meta name="msapplication-tap-highlight" content="no">
+		<link href="{{ asset("main.css") }}" rel="stylesheet"></head>
+	<body>
+		<div class="app-container app-theme-white body-tabs-shadow">
+			<div class="app-container">
+				<div class="h-100 bg-plum-plate bg-animation">
+					<div class="d-flex h-100 justify-content-center align-items-center">
+						<div class="mx-auto app-login-box col-md-8">
+							<div class="app-logo-inverse mx-auto mb-3"></div>
+							<div class="modal-dialog w-100 mx-auto">
+								<div class="modal-content">
+									<div class="modal-body">
+										<div class="h5 modal-title text-center">
+											<h4 class="mt-2">
+												<div>Welcome back,</div>
+												<span>Please sign in to your account below.</span>
+											</h4>
+										</div>
+										<form class="">
+											<div class="form-row">
+												<div class="col-md-12">
+													<div class="position-relative form-group">
+														<input name="email" id="exampleEmail" placeholder="Email here..." type="email" class="form-control">
+													</div>
+												</div>
+												<div class="col-md-12">
+													<div class="position-relative form-group">
+														<input name="password" id="examplePassword" placeholder="Password here..." type="password" class="form-control">
+													</div>
+												</div>
+											</div>
+											<div class="position-relative form-check">
+												<input name="check" id="exampleCheck" type="checkbox" class="form-check-input">
+												<label for="exampleCheck" class="form-check-label">Keep me logged in</label>
+											</div>
+										</form>
+										<div class="divider"></div>
+										<h6 class="mb-0">No account?
+											<a href="javascript:void(0);" class="text-primary">Sign up now</a>
+										</h6>
+									</div>
+									<div class="modal-footer clearfix">
+										<div class="float-left">
+											<a href="javascript:void(0);" class="btn-lg btn btn-link">Recover Password</a>
+										</div>
+										<div class="float-right">
+											<button class="btn btn-primary btn-lg">Login to Dashboard</button>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="text-center text-white opacity-8 mt-3">Copyright © ArchitectUI 2019</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="{{ asset("main.css") }}"></script>
+	</body>
+</html>
 
-{% block title %}Log in!{% endblock %}
+{# {% block title %}Log in!
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<form method="post">
+		{% if error %}
+			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+		{% if app.user %}
+			<div class="mb-3">
+				You are logged in as {{ app.user.username }},
+				<a href="{{ path('app_logout') }}">Logout</a>
+			</div>
+		{% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+		<label for="inputUsername">Username</label>
+		<input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+		<label for="inputPassword">Password</label>
+		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+		<input
+		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+		
+		        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+		        See https://symfony.com/doc/current/security/remember_me.html
+		
+		        <div class="checkbox mb-3">
+		            <label>
+		                <input type="checkbox" name="_remember_me"> Remember me
+		            </label>
+		        </div>
+		    
+            		<button class="btn btn-lg btn-primary" type="submit">
+			Sign in
+		</button>
+	</form>
+{% endblock %} #}
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
-{% endblock %}
