--- a/public/main.css
+++ b/public/main.css
@@ -16,6 +16,30 @@
     border-color: #6c757d
 }
 
+.btn-ribeprim:hover {
+    color: #fff;
+    background-color: #51a138;
+    border-color: #51a138
+}
+
+.btn-ribeprim{
+    color: #fff;
+    background-color: #70c057;
+    border-color: #70c057;
+    
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color 0.15s, background-color 0.15s, border-color 0.15s, box-shadow 0.15s
+}
+
 .border-success {
     border-color: #3ac47d
 }
@@ -296,7 +320,7 @@ a.bg-alternate:hover, a.bg-alternate:focus, button.bg-alternate:hover, button.bg
     --red: #dc3545;
     --orange: #fd7e14;
     --yellow: #ffc107;
-    --green: #28a745;
+    --green: #70c057;
     --teal: #20c997;
     --cyan: #17a2b8;
     --white: #fff;
@@ -11436,11 +11460,11 @@ a, button, .btn {
 }
 
 .bg-arielle-smile {
-    background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%) !important
+    background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%) !important 
 }
 
 .bg-plum-plate {
-    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%) !important
+    background-image: linear-gradient(90deg, #00aae7 0%, #70c057 50%, #f6861f 100%) !important
 }
 
 .bg-happy-fisher {
