--- a/templates/TauxEBL/date.html.twig
+++ b/templates/TauxEBL/date.html.twig
@@ -14,6 +14,22 @@
 				<div class="card-body">
 					<h5 class="card-title">Grid Rows</h5>
 					<form method="GET">
+						{% if app.user.company.name == "RIBEGROUPE" %}
+						<div class="form-row">
+							<div class="col-md-12">
+								<div class="position-relative form-group">
+									<label for="dateStart" class="">Société</label>
+									<select class="form-control" name="company">
+										{% for company in companies %}
+											<option value="{{ company.databaseName }}">{{ company.name }}</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+						</div>
+						{% else %}
+							<input type="hidden" name="company" value="{{ app.user.company.name }}"/>
+						{% endif %}
 						<div class="form-row">
 							<div class="col-md-6">
 								<div class="position-relative form-group">
