--- a/templates/TauxEBL/date.html.twig
+++ b/templates/TauxEBL/date.html.twig
@@ -28,7 +28,7 @@
 							</div>
 						</div>
 						{% else %}
-							<input type="hidden" name="company" value="{{ app.user.company.name }}"/>
+							<input type="hidden" name="company" value="{{ app.user.company.databaseName }}"/>
 						{% endif %}
 						<div class="form-row">
 							<div class="col-md-6">
