--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -211,6 +211,7 @@
 										</a>
 										<ul>
 											<li><a href="{{ path("tauxDate") }}"><i class="metismenu-icon pe-7s-graph2"></i>Taux Egalim / Bio / Local</a></li>
+											<li><a href="{{ path("hodAPI") }}"><i class="metismenu-icon pe-7s-graph2"></i>Stats HubOne</a></li>
 										</ul>
 									</li>
 
