--- a/templates/HOD/stats_hod_clients.html.twig
+++ b/templates/HOD/stats_hod_clients.html.twig
@@ -12,28 +12,7 @@
 			<div class="main-card mb-3 card">
 				<div class="card-body">
 					<h5 class="card-title">LTROUVER UN TRITRE</h5>
-                    <table class="mb-0 table table-striped">
-						<thead>
-							<tr>
-								<th style="text-align: center;">Taux EGALIM</th>
-								<th style="text-align: center;">Taux BIO</th>
-								<th style="text-align: center;">Taux LOCAL</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-							    <td style="text-align: center;">test2 %</td>
-							    <td style="text-align: center;">test6 %</td>
-							    <td style="text-align: center;">test 8 %</td>
-							</tr>
-							<tr>
-							    <td style="text-align: center;">test €</td>
-							    <td style="text-align: center;">test2 €</td>
-							    <td style="text-align: center;">test3 €</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="mb-0 table table-striped">
+					<table class="mb-0 table table-striped" style="display: block; overflow-x: auto; white-space: nowrap;">
 						<thead>
 							<tr>
 								<th>Tournée</th>
