--- a/templates/HOD/stats_hod_clients.html.twig
+++ b/templates/HOD/stats_hod_clients.html.twig
@@ -12,7 +12,7 @@
 			<div class="main-card mb-3 card">
 				<div class="card-body">
 					<h5 class="card-title">LTROUVER UN TRITRE</h5>
-					<table class="mb-0 table table-striped" style="display: block; overflow-x: auto; white-space: nowrap;">
+					<table class="mb-0 table table-striped">
 						<thead>
 							<tr>
 								<th>Tournée</th>
