--- a/public/main.css
+++ b/public/main.css
@@ -1782,7 +1782,7 @@ pre code {
 .table {
     width: 100%;
     margin-bottom: 1rem;
-    background-color: rgba(0, 0, 0, 0)
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .table th, .table td {
