--- a/templates/TauxEBL/taux.html.twig
+++ b/templates/TauxEBL/taux.html.twig
@@ -33,7 +33,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<table class="mb-0 table table-striped" style="display: block; overflow-x: auto; white-space: nowrap;">
+					<table class="mb-0 table table-striped">
 						<thead>
 							<tr>
 								<th>Libelle Article</th>
