--- a/templates/Admin/Companies/companies.html.twig
+++ b/templates/Admin/Companies/companies.html.twig
@@ -21,7 +21,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="main-card mb-3 card">
-				<div class="card-body">
+				<div class="card-body"  style="overflow-x: auto; width: 100%;">
 					<h5 class="card-title">Sociétés du Réseau Ribé</h5>
 					<table class="mb-0 table table-striped">
 						<thead>
