--- a/templates/HOD/form_stats_hod.html.twig
+++ b/templates/HOD/form_stats_hod.html.twig
@@ -13,7 +13,7 @@
 			<div class="main-card mb-3 card">
 				<div class="card-body">
 					<h5 class="card-title">Grid Rows</h5>
-					<form method="GET">
+					<form method="POST">
 						{% if app.user.company.name == "RIBEGROUPE" %}
 						<div class="form-row">
 							<div class="col-md-12">
