--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
 		<meta name="description" content="Outils / Logiciels > RibéGroupe">
 		<meta name="msapplication-tap-highlight" content="no">
 		<link href="{{ asset('main.css') }}" rel="stylesheet">
+		<link rel="icon" type="image/ico" href="{{ asset("images/societes/logo.ico") }}" />
 	</head>
 
 	<style>
