--- a/templates/TauxEBL/taux.html.twig
+++ b/templates/TauxEBL/taux.html.twig
@@ -6,6 +6,20 @@
 	Taux Egalim / Bio / Local : <strong>{{ ftgnr }}</strong> du {{ dateStart }} au {{ dateEnd }}
 {% endblock %}
 
+{% block actionsPage %}
+    <div class="d-inline-block dropdown" style="color: white">
+		<a class="btn mr-2 mb-2 btn-danger" href="{{ path("tauxEBL_PDF", {'ftgnr': ftgnr, 'dateStart': dd_start, 'dateEnd': dd_fin, 'company': company } ) }}">
+			Exporter le Tableau : PDF
+		</a>
+	</div>
+
+	<div class="d-inline-block dropdown" style="color: white">
+		<a class="btn mr-2 mb-2 btn-success">
+			Exporter le Tableau : EXCEL
+		</a>
+	</div>
+{% endblock %}
+
 {% block body %}
 	<div class="row">
 		<div class="col-lg-12">
@@ -14,7 +28,7 @@
 					<h5 class="card-title">Liste des produits achetés par <strong>{{ ftgnr }}</strong> du {{ dateStart }} au {{ dateEnd }}</h5>
                     <table class="mb-0 table table-striped">
 						<thead>
-							<tr>
+							<tr style="background-color: {{ app.user.company.colorCode }}; color: {{ app.user.company.colorText }}">
 								<th style="text-align: center;">Taux EGALIM</th>
 								<th style="text-align: center;">Taux BIO</th>
 								<th style="text-align: center;">Taux LOCAL</th>
@@ -22,20 +36,37 @@
 						</thead>
 						<tbody>
 							<tr>
-							    <td style="text-align: center;">{{ tx_egalim|round(2, 'floor') }} %</td>
-							    <td style="text-align: center;">{{ tx_bio|round(2, 'floor') }} %</td>
-							    <td style="text-align: center;">{{ tx_local|round(2, 'floor') }} %</td>
+							    <th style="text-align: center;">{{ tx_egalim|round(2, 'floor') }} %</th>
+							    <th style="text-align: center;">{{ tx_bio|round(2, 'floor') }} %</th>
+							    <th style="text-align: center;">{{ tx_local|round(2, 'floor') }} %</th>
 							</tr>
 							<tr>
-							    <td style="text-align: center;">{{ mt_egalim|round(2, 'floor') }} €</td>
-							    <td style="text-align: center;">{{ mt_bio|round(2, 'floor') }} €</td>
-							    <td style="text-align: center;">{{ mt_local|round(2, 'floor') }} €</td>
+							    <th style="text-align: center;">{{ mt_egalim|round(2, 'floor') }} €</th>
+							    <th style="text-align: center;">{{ mt_bio|round(2, 'floor') }} €</th>
+							    <th style="text-align: center;">{{ mt_local|round(2, 'floor') }} €</th>
 							</tr>
 						</tbody>
 					</table>
+					
 					<table class="mb-0 table table-striped">
 						<thead>
-							<tr>
+							<tr style="text-align: center; background-color: {{ app.user.company.colorCode }}; color: {{ app.user.company.colorText }}">
+								<th>Total Articles</th>
+								<th>Total EGALIM</th>
+								<th>Total BIO</th>
+								<th>Total LOCAL</th>
+								<th>Total Poids</th>
+                                <th>Total Montant</th>
+							</tr>
+							<tr style="text-align:center;">
+								<th>{{ tt_articles }}</th>
+								<th>{{ tt_egalim }}</th>
+								<th>{{ tt_bio }}</th>
+								<th>{{ tt_local }}</th>
+								<th>{{ tt_poids }} Kg</th>
+                                <th>{{ tt_montant }} €</th>
+							</tr>
+							<tr style="text-align: center; background-color: {{ app.user.company.colorCode }}; color: {{ app.user.company.colorText }}">
 								<th>Libelle Article</th>
 								<th>EGALIM</th>
 								<th>BIO</th>
@@ -49,14 +80,32 @@
 							{% for article in articles %}
 								<tr>
 									<th>{{ article.Libelle_Article }}</th>
-									<th>{% if article.EGALIM == 1 %}EGALIM{% endif %}</th>
-									<th>{% if article.BIO == 191 %}BIO{% endif %}</th>
-									<th>{% if article.LOCAL == 10 %}LOCAL{% endif %}</th>
-									<th>{{ article.Poids|round(2, 'floor')  }}</th>
-									<th>{{ article.Prix_HT|round(2, 'floor')  }}</th>
+									<th style="text-align:center;">{% if article.EGALIM == 1 %}EGALIM{% endif %}</th>
+									<th style="text-align:center;">{% if article.BIO == 191 %}BIO{% endif %}</th>
+									<th style="text-align:center;">{% if article.LOCAL == 10 %}LOCAL{% endif %}</th>
+									<th style="text-align:center;">{{ article.Poids|round(2, 'floor')  }}</th>
+									<th style="text-align:center;">{{ article.Prix_HT|round(2, 'floor')  }}</th>
 								</tr>
 							{% endfor %}
 						</tbody>
+						<tfoot>
+							<tr style="text-align: center; background-color: {{ app.user.company.colorCode }}; color: {{ app.user.company.colorText }}">
+								<th>Total Articles</th>
+								<th>Total EGALIM</th>
+								<th>Total BIO</th>
+								<th>Total LOCAL</th>
+								<th>Total Poids</th>
+                                <th>Total Montant</th>
+							</tr>
+							<tr style="text-align: center">
+								<th>{{ tt_articles }}</th>
+								<th>{{ tt_egalim }}</th>
+								<th>{{ tt_bio }}</th>
+								<th>{{ tt_local }}</th>
+								<th>{{ tt_poids }} Kg</th>
+                                <th>{{ tt_montant }} €</th>
+							</tr>
+						</tfoot>
 					</table>
 				</div>
 			</div>
