--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,6 +38,11 @@
 			color: {{app.user.company.colorCode}}
 			;
 		}
+
+		.card-body{
+			overflow-x: auto; 
+			width: 100%;
+		}
 	</style>
 
 	<body>
