--- a/templates/FichesArticle/FicheArticle.html.twig
+++ b/templates/FichesArticle/FicheArticle.html.twig
@@ -10,7 +10,8 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="main-card mb-3 card">
-				<div class="card-body" style="overflow-x: auto; width: 100%;">
+				<div class="card-body">
+					<h5 class="card-title">Liste des Fiches Article</h5>
 					<table class="mb-0 table table-striped">
 						<thead>
 							<tr>
