--- a/templates/TauxEBL/taux.html.twig
+++ b/templates/TauxEBL/taux.html.twig
@@ -47,7 +47,8 @@
 							</tr>
 						</tbody>
 					</table>
-					
+				</div>
+				<div class="card-body">
 					<table class="mb-0 table table-striped">
 						<thead>
 							<tr style="text-align: center; background-color: {{ app.user.company.colorCode }}; color: {{ app.user.company.colorText }}">
