--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,6 +43,14 @@
 			overflow-x: auto; 
 			width: 100%;
 		}
+
+		
+.app-header__logo .logo-src {
+    height: 23px;
+    width: 97px;
+    background: url({{ asset("images/societes/reseau_ribe.png") }})
+}
+
 	</style>
 
 	<body>
