--- a/templates/TauxEBL/taux.html.twig
+++ b/templates/TauxEBL/taux.html.twig
@@ -47,8 +47,7 @@
 							</tr>
 						</tbody>
 					</table>
-				</div>
-				<div class="card-body">
+					<div class="table-responsive">
 					<table class="mb-0 table table-striped">
 						<thead>
 							<tr style="text-align: center; background-color: {{ app.user.company.colorCode }}; color: {{ app.user.company.colorText }}">
@@ -108,6 +107,7 @@
 							</tr>
 						</tfoot>
 					</table>
+				</div>
 				</div>
 			</div>
 		</div>
